# uvic-rover-2025

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  package.xml  setup.py  testing_access.txt
.github/workflows/: build.yml
config/: README.md  ekf_global.yaml  ekf_local.yaml
docs/: dev.md
firmware/: README.md
launch/: README.md  bringup.launch  ekf_global.launch  ekf_local.launch  master.launch  navsat_transform.launch  robot_description.launch  system.launch  zed.launch
nodes/: README.md
nodes/odom/: README.md  imu.py
scripts/: README.md  READMe.md  arduino_imu_serial_talker.ino  aruco_detector.py  requirements.txt
scripts/odom/: imu.py  mpu9250_calibrate.ino  mpu9250_run.ino
src/: README.md
src/nav/: gps.py  imu.py
src/params/: ekf_local.yaml
src/uvic_rover/odom/: gps.py
src/uvic_rover/utils/: rover_logger.py
src/uvic_rover/zed/: aruco_detector.py
urdf/: README.md  rover.urdf.xacro
