<?xml version="1.0"?>
<package format="2">
   <name>uvic_rover</name>
   <version>1.0.0</version>
   <description>The ROS-UVic-Rover package.</description>
  
   <!-- Required maintainer and license tags -->
   <maintainer email="uvic.robotics@gmail.com">UVicRobotics</maintainer>
   <license>MIT</license>
   
   <!-- Catkin build tool dependency -->
   <buildtool_depend>catkin</buildtool_depend>
   <!-- 
   VERY IMPORTANT:
   Keep this list of dependencies in sync with the following sections in CMakeLists.txt:

   1. find_package(catkin REQUIRED COMPONENTS ...)
      - All listed packages here must appear as <build_depend> and <exec_depend>

   2. generate_messages(DEPENDENCIES ...)
      - Any packages listed here (e.g., std_msgs, sensor_msgs) must also appear as dependencies.

   3. catkin_package(CATKIN_DEPENDS ...)
      - All listed packages here must also be declared below.

   Missing these will cause catkin_package() or cmake to fail during catkin_make.
   -->
   <!-- Core dependencies required for compiling and running the nodes -->
   <build_depend>roscpp</build_depend>
   <build_depend>rospy</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_depend>gps_common</build_depend>
   <build_depend>robot_localization</build_depend>
   <build_depend>message_runtime</build_depend>
   <build_depend>cv_bridge</build_depend>
   <build_depend>image_transport</build_depend>
   <build_depend>zed_wrapper</build_depend>
    
   <!-- Runtime dependencies mirror the build dependencies -->
   <exec_depend>roscpp</exec_depend>
   <exec_depend>rospy</exec_depend>
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>sensor_msgs</exec_depend>
   <exec_depend>gps_common</exec_depend>
   <exec_depend>robot_localization</exec_depend>
   <exec_depend>message_runtime</exec_depend>
   <exec_depend>cv_bridge</exec_depend>
   <exec_depend>image_transport</exec_depend>
   <exec_depend>zed_wrapper</exec_depend>
  
   <!-- The export tag is required even if left empty -->
   <export></export>
</package>
